# xai-benchmark-autonomous-driving

./: .gitignore  README.md  pyproject.toml  requirements.txt
configs/: tta_uq.yaml
configs/xai/: ssgradcampp.yaml
data/kitti/: kitti.yaml  kitti_local.example.yaml
notebooks/: tests.ipynb  tta_augmentation_selection.ipynb  tta_uq_analysis.ipynb  xai_evaluation_analysis.ipynb
scripts/: run_evaluation.py  run_tta_uq.py  run_xai_explanations.py  train_finetune_stage1.py  train_finetune_stage2.py
src/xai_benchmark/: __init__.py
src/xai_benchmark/data/: __init__.py  kitti_dataset.py
src/xai_benchmark/detection/: __init__.py  yolo_head.py
src/xai_benchmark/evaluation/: __init__.py  detection_metrics.py  quantus_metrics.py
src/xai_benchmark/uncertainty/: __init__.py  tta.py
src/xai_benchmark/xai/: __init__.py  common.py  ssgradcampp.py
