[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "xai-benchmark"
version = "0.1.0"
description = "Benchmark de tecnicas de explicabilidad (XAI) para deteccion de objetos en conduccion autonoma (YOLO26 + KITTI)."
requires-python = ">=3.11"

[tool.setuptools.packages.find]
where = ["src"]
